# Space-game

./: Cargo.toml
assets/shaders/: base.frag  base.vert  test.frag  test.vert
src/: clock.rs  components.rs  entities.rs  event_handler.rs  main.rs  state.rs  systems.rs  vector.rs  window.rs
src/entities/: celestial_body.rs  ship.rs
src/state/: camera.rs  clock.rs  programs.rs  settings.rs  textures.rs  vertex_buffers.rs  window.rs
src/state/settings/: keybindings.rs
src/systems/: controls.rs  gravity.rs  movement.rs  render.rs
