[package]
name = "space-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
glium = "0.32.1"
winit = { version = "0.27.5", features = ["serde"] }
hecs = "0.10.3"
image = "0.24.7"
serde = { version = "1.0.188", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
ron = "0.8.1"
