[package]
name = "space-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
glium = { git = "https://github.com/glium/glium.git", tag = "v0.36.0"}
winit = { version = "0.30.5", features = ["serde"] }
image = "0.24.7"
serde = { version = "1.0.188", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
ron = "0.8.1"
hecs = "0.10.3"
